# cookiecutter-brouzes

{{ cookiecutter.repo_name }}/: pyproject.toml
